07-lection5/01-checkbox/checkbox.css
.checkbox__state {
  position: relative;
  display: inline-flex;
  align-items: center;
  gap: 12px;
}

.checkbox__control {
  width: 28px;
  height: 28px;
  background: var(--white);
  border: 1px solid var(--grey-2);
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.checkbox__label {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: var(--grey-4);
}

.checkbox__icon {
  display: none;
  color: var(--white);
}

.checkbox__input:checked ~ .checkbox__state 
.checkbox__control {
  border-color: var(--blue-2);
  background: var(--blue-2);
}

.checkbox__input:checked ~ .checkbox__state 
.checkbox__icon {
  display: block;
}

.checkbox__input {
  position: absolute;
  left: -100vw;
}

.checkbox__input:focus ~ .checkbox__state 
.checkbox__label {
  text-decoration: underline;
}

.checkbox__input:disabled ~ .checkbox__state 
.checkbox__label {
  color: var(--grey-2);
}

.checkbox__input:disabled ~ .checkbox__state 
.checkbox__control {
  border-color: var(--grey-2);
  background: var(--grey-2);
}

